--- a/src/components/settings/general-settings.component.html
+++ b/src/components/settings/general-settings.component.html
@@ -60,16 +60,32 @@
     <div class="settings-section">
         <h4>{{ t.settings.title }}</h4>
 
-        <div class="form-row">
-            <div class="form-group">
-                <label>{{ t.general.language }}</label>
-                <select class="form-control" [(ngModel)]="language" (change)="updateLanguage(language)">
-                    <option *ngFor="let lang of languages" [value]="lang.value">
-                        {{ lang.flag }} {{ lang.label }}
-                    </option>
-                </select>
+        <div class="ui-settings-grid">
+            <!-- 第一行：语言和位置 -->
+            <div class="ui-settings-row">
+                <div class="form-group">
+                    <label>{{ t.general.language }}</label>
+                    <select class="form-control" [(ngModel)]="language" (change)="updateLanguage(language)">
+                        <option *ngFor="let lang of languages" [value]="lang.value">
+                            {{ lang.flag }} {{ lang.label }}
+                        </option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>{{ t.general.sidebarPosition || '侧边栏位置' }}</label>
+                    <div class="position-selector">
+                        <button *ngFor="let pos of sidebarPositions" class="position-btn"
+                            [class.active]="sidebarPosition === pos.value" (click)="updateSidebarPosition(pos.value)" type="button">
+                            <i class="fa" [ngClass]="pos.icon"></i>
+                            <span>{{ pos.label }}</span>
+                        </button>
+                    </div>
+                    <p class="form-description">{{ t.general.sidebarPositionDesc || '选择 AI 侧边栏显示在窗口左侧还是右侧' }}</p>
+                </div>
             </div>
 
+            <!-- 第二行：主题 -->
             <div class="form-group theme-group">
                 <label>{{ t.general.theme }}</label>
                 <div class="theme-selector">
